# axum-modular-monolith-api

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml
crates/modules/health/: Cargo.toml
crates/modules/health/src/: lib.rs
crates/modules/user/: Cargo.toml
crates/modules/user/src/: handler.rs  lib.rs  model.rs  repository.rs  usecase.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  state.rs
infrastructure/: Dockerfile  docker-compose.yml
migrations/: 20240101000000_create_users.sql
