[package]
name = "module-user"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
shared = { path = "../../shared" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
chrono = "0.4"
http = "1"
http-body-util = "0.1"
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
